reto calcular altura de un triangulo isoceles resuelto

--- a/figuras.html
+++ b/figuras.html
@@ -69,6 +69,29 @@
                 calcular el area
             </button>
         </form>
+
+        <form action="">
+            <h2>reto de calculo de altura de un triangulo isosceles</h2>
+            <label for="inputIsocelesLado1">
+                cuanto mide el primer lado:
+            </label>
+            <input id="inputIsocelesLado1" type="number" />
+
+            <label for="inputIsocelesLado2">
+                cuanto mide el segundo lado:
+            </label>
+            <input id="inputIsocelesLado2" type="number" />
+
+            <label for="inputIsocelesBase">
+                cuanto mide la base:
+            </label>
+            <input id="inputIsocelesBase" type="number" />
+
+            <button type="button" onclick="calcularIsocelesAltura()">
+                calcular altura
+            </button>
+        </form>
+
     </section>
     <script src="./figuras.js"></script>
 </body>
